feat/25/dev: 썸네일 원본사진/압축본 저장 및 긴급수정 (#84)